small fix overflow hidden on slide

--- a/app/stylesheets/css/main.css
+++ b/app/stylesheets/css/main.css
@@ -2426,14 +2426,14 @@ h5.text-smallest {
   position: relative;
   border: 20px solid #FFF;
   margin-top: 20px;
-  text-align: center;
-  overflow: hidden; }
+  text-align: center; }
 
 .slide {
   position: absolute;
   top: 0;
   left: 0;
-  width: 100%; }
+  width: 100%;
+  overflow: hidden; }
   .slide.is-active:after {
     content: "";
     position: absolute;
